--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:clean": "next dev --turbo",
+    "dev": "next dev --turbo",
+    "dev:webpack": "next dev",
+    "dev:clean": "node scripts/clean-cache.js && next dev --turbo",
+    "clean": "node scripts/clean-cache.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
